diss: isipta11 finishing the anteater part

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -328,3 +328,12 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   pages = {209--238},
 }
 
+@techreport{1999:walleybernard,
+Author = {Walley, P. and Bernard, J.-M.},
+Institution = {Universit\'{e} Paris 8},
+Title = {Imprecise Probabilistic Prediction for Categorical Data},
+Number ={CAF-9901},
+Type = {Technical {R}eport},
+Year = {1999}
+}
+
