--- a/defs.tex
+++ b/defs.tex
@@ -79,6 +79,9 @@
 \def\MZ{\mathcal{M}\uz}
 \def\MN{\mathcal{M}\un}
 
+\def\cl{\ul{c}}
+\def\cu{\ol{c}}
+
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
 \newcommand{\E}{\operatorname{E}}
