--- a/head.tex
+++ b/head.tex
@@ -25,6 +25,8 @@
 \usepackage{amsthm}
 \usepackage{bm}
 
+\usepackage{multirow}
+
 \usepackage{tikz}
 \usetikzlibrary{calc,decorations.pathreplacing,shapes,positioning,arrows}
 
